force-app/main/default/objects/Levantamiento_Tecnico__c/Levantamiento_Tecnico__c.object-meta.xml
<CustomObject>
    <description>Líneas de detalle capturadas durante el levantamiento técnico en sitio.</description>
    <label>Línea de Levantamiento</label>
    <nameField>
        <displayFormat>LEV-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de Levantamiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>