force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Area_Cocina_Banos__c.field-meta.xml
<CustomField>
    <fullName>Area_Cocina_Banos__c</fullName>
    <label>Área Cocina o Baños</label>
    <length>255</length>
    <type>Text</type>
</CustomField>