force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Azolves__c.field-meta.xml
<CustomField>
    <fullName>Azolves__c</fullName>
    <label>Azolves</label>
    <length>255</length>
    <type>Text</type>
</CustomField>