force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Bidon_10L__c.field-meta.xml
<CustomField>
    <fullName>Bidon_10L__c</fullName>
    <label>Bidón 10L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>