force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Bidon_25L__c.field-meta.xml
<CustomField>
    <fullName>Bidon_25L__c</fullName>
    <label>Bidón 25L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>