force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Canastilla__c.field-meta.xml
<CustomField>
    <fullName>Canastilla__c</fullName>
    <label>Canastilla</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>