force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Cantidad_Principal__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Principal__c</fullName>
    <description>Se usa para #WC, #VE, #Equipos ARM o #Sedes según el tipo de servicio.</description>
    <label>Cantidad Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>