force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Coladeras__c.field-meta.xml
<CustomField>
    <fullName>Coladeras__c</fullName>
    <label>Coladeras</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>