force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Cuarto_Humado__c.field-meta.xml
<CustomField>
    <fullName>Cuarto_Humado__c</fullName>
    <label>Cuarto Húmedo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>