force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Dias_Servicio_Censo__c.field-meta.xml
<CustomField>
    <fullName>Dias_Servicio_Censo__c</fullName>
    <label>Días de Servicio (Censo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>