force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Dimensiones_Generales__c.field-meta.xml
<CustomField>
    <fullName>Dimensiones_Generales__c</fullName>
    <label>Dimensiones</label>
    <length>100</length>
    <type>Text</type>
</CustomField>