force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Elemento__c.field-meta.xml
<CustomField>
    <fullName>Elemento__c</fullName>
    <label>Elemento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>