force-app/main/default/objects/Levantamiento_Tecnico__c/fields/ENT__c.field-meta.xml
<CustomField>
    <fullName>ENT__c</fullName>
    <label>ENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>