force-app/main/default/objects/Levantamiento_Tecnico__c/fields/EPP_Requerido__c.field-meta.xml
<CustomField>
    <fullName>EPP_Requerido__c</fullName>
    <label>Epp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>