force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Equipos_ARM__c.field-meta.xml
<CustomField>
    <fullName>Equipos_ARM__c</fullName>
    <label># ARM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>