force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Escamoche__c.field-meta.xml
<CustomField>
    <fullName>Escamoche__c</fullName>
    <label>Escamoche</label>
    <length>255</length>
    <type>Text</type>
</CustomField>