force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Estado_Instalacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Instalacion__c</fullName>
    <label>Estado de Instalación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>