force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Estado_Trampa__c.field-meta.xml
<CustomField>
    <fullName>Estado_Trampa__c</fullName>
    <label>Estado de Trampa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>