force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Fotografia__c.field-meta.xml
<CustomField>
    <fullName>Fotografia__c</fullName>
    <label>Fotografía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>