force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>