force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Frecuencia_Limpieza__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_Limpieza__c</fullName>
    <label>Frecuencia de Limpieza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>