force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Consideraciones_Especiales__c.field-meta.xml
<CustomField>
    <fullName>GM_Consideraciones_Especiales__c</fullName>
    <label>GM Consideraciones Especiales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>