force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Contenedores_Sugeridos__c.field-meta.xml
<CustomField>
    <fullName>GM_Contenedores_Sugeridos__c</fullName>
    <label>GM Contenedores Sugeridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>