force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Dias_Servicio__c.field-meta.xml
<CustomField>
    <fullName>GM_Dias_Servicio__c</fullName>
    <label>GM Días de Servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>