force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Frecuencia_Recoleccion__c.field-meta.xml
<CustomField>
    <fullName>GM_Frecuencia_Recoleccion__c</fullName>
    <label>GM Frecuencia Recolección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>