force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Frecuencia_Uso__c.field-meta.xml
<CustomField>
    <fullName>GM_Frecuencia_Uso__c</fullName>
    <label>GM - Frecuencia de Uso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>