force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Motivo_Necesidad__c.field-meta.xml
<CustomField>
    <fullName>GM_Motivo_Necesidad__c</fullName>
    <label>GM Motivo de la Necesidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>