force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Permisos_Acceso__c.field-meta.xml
<CustomField>
    <fullName>GM_Permisos_Acceso__c</fullName>
    <label>GM Permisos de Acceso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>