force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Permite_Levantamiento_Foto__c.field-meta.xml
<CustomField>
    <fullName>GM_Permite_Levantamiento_Foto__c</fullName>
    <label>GM Permite Levantamiento Foto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>