force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Presupuesto_Asignado__c.field-meta.xml
<CustomField>
    <fullName>GM_Presupuesto_Asignado__c</fullName>
    <label>GM Presupuesto Asignado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>