force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Requiere_Capacitacion__c.field-meta.xml
<CustomField>
    <fullName>GM_Requiere_Capacitacion__c</fullName>
    <label>GM Requiere Capacitación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>