force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Sanitarios_Totales__c.field-meta.xml
<CustomField>
    <fullName>GM_Sanitarios_Totales__c</fullName>
    <label>GM - Sanitarios Totales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>