force-app/main/default/objects/Levantamiento_Tecnico__c/fields/GM_Usuarias_Externas__c.field-meta.xml
<CustomField>
    <fullName>GM_Usuarias_Externas__c</fullName>
    <label>GM Usuarias Externas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>