force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Instalaciones__c</fullName>
    <label>Instalaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>