force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Mampara__c.field-meta.xml
<CustomField>
    <fullName>Mampara__c</fullName>
    <label>Mampara</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>