force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Materiales_Insumos__c.field-meta.xml
<CustomField>
    <fullName>Materiales_Insumos__c</fullName>
    <label>Materiales insumos requeridos</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>