force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Memoria_Descriptiva__c.field-meta.xml
<CustomField>
    <fullName>Memoria_Descriptiva__c</fullName>
    <description>Descripción técnica detallada específica para este hallazgo o área.</description>
    <label>Memoria Descriptiva</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>