force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Metros_Cuadrados__c.field-meta.xml
<CustomField>
    <fullName>Metros_Cuadrados__c</fullName>
    <label>M2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>