force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Metros_Lineales__c.field-meta.xml
<CustomField>
    <fullName>Metros_Lineales__c</fullName>
    <label>Metros Líneales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>