force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Mingitorios__c.field-meta.xml
<CustomField>
    <fullName>Mingitorios__c</fullName>
    <label>Mingitorios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>