force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Modelo_Grasas__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Grasas__c</fullName>
    <label>Modelo (Grasas)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>