force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Modelo_TG_Bio__c.field-meta.xml
<CustomField>
    <fullName>Modelo_TG_Bio__c</fullName>
    <label>Modelo TG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>