force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Mueble__c.field-meta.xml
<CustomField>
    <fullName>Mueble__c</fullName>
    <label>Mueble</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>