force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <label>Nivel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>