force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <length>131032</length>
    <type>LongTextArea</type>
</CustomField>