force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Observaciones_Tecnicas__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Tecnicas__c</fullName>
    <label>Observaciones Técnicas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>