force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Líneas de Levantamiento</relationshipLabel>
    <relationshipName>Lineas_de_Levantamiento</relationshipName>
    <type>Lookup</type>
</CustomField>