force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Ovalines_Lavabo__c.field-meta.xml
<CustomField>
    <fullName>Ovalines_Lavabo__c</fullName>
    <label>Ovalines / Lavabo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>