force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Pared__c.field-meta.xml
<CustomField>
    <fullName>Pared__c</fullName>
    <label>Pared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>