force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Piso__c.field-meta.xml
<CustomField>
    <fullName>Piso__c</fullName>
    <label>Piso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>