force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Líneas de Levantamiento</relationshipLabel>
    <relationshipName>Lineas_de_Levantamiento</relationshipName>
    <type>Lookup</type>
</CustomField>