force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Residuos_Tarja__c.field-meta.xml
<CustomField>
    <fullName>Residuos_Tarja__c</fullName>
    <label>Residuos Tarja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>