force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Ret_Salida__c.field-meta.xml
<CustomField>
    <fullName>Ret_Salida__c</fullName>
    <label>Ret. Salida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>