force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Sello__c.field-meta.xml
<CustomField>
    <fullName>Sello__c</fullName>
    <label>Sello</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>