force-app/main/default/objects/Levantamiento_Tecnico__c/fields/SP__c.field-meta.xml
<CustomField>
    <fullName>SP__c</fullName>
    <label>SP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>