force-app/main/default/objects/Levantamiento_Tecnico__c/fields/ST_1__c.field-meta.xml
<CustomField>
    <fullName>ST_1__c</fullName>
    <label>ST-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>