force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Tapon_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tapon_Registro__c</fullName>
    <label>Tapón Registro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>