force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Tarja__c.field-meta.xml
<CustomField>
    <fullName>Tarja__c</fullName>
    <label>Tarja</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>