force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Tarjas_Servicios__c.field-meta.xml
<CustomField>
    <fullName>Tarjas_Servicios__c</fullName>
    <label>Tarjas Servicios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>