force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Tinas_por_Tarja__c.field-meta.xml
<CustomField>
    <fullName>Tinas_por_Tarja__c</fullName>
    <label>Tinas por Tarja</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>