force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Tipo_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Servicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BIOENZIMÁTICO</fullName>
            </value>
            <value>
                <fullName>GRASAS</fullName>
            </value>
            <value>
                <fullName>INTIMA</fullName>
            </value>
            <value>
                <fullName>AROMATIZANTES</fullName>
            </value>
            <value>
                <fullName>VACTOR</fullName>
            </value>
            <value>
                <fullName>DESAZOLVE MECANICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>