force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Tornillo__c.field-meta.xml
<CustomField>
    <fullName>Tornillo__c</fullName>
    <label>Tornillo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>