force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Trampa_Grasa__c.field-meta.xml
<CustomField>
    <fullName>Trampa_Grasa__c</fullName>
    <label>Trampa Grasa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>