force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Alcance_Pyatz__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Alcance_Pyatz__c</fullName>
    <label>Vactor Alcance Pyatz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>