force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Ancho__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Ancho__c</fullName>
    <label>Vactor Ancho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>