force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Descripcion__c</fullName>
    <label>Vactor Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>