force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Dificultad__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Dificultad__c</fullName>
    <label>Vactor Dificultad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>