force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Distancia_Camion__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Distancia_Camion__c</fullName>
    <label>Vactor Distancia Camión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>