force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Largo__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Largo__c</fullName>
    <label>Vactor Largo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>