force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Material__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Material__c</fullName>
    <label>Vactor Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>