force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Medida__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Medida__c</fullName>
    <label>Vactor Medida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>