force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Permiso_Plaza__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Permiso_Plaza__c</fullName>
    <label>Vactor Permiso Plaza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>