force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Profundidad__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Profundidad__c</fullName>
    <label>Vactor Profundidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>