force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Vactor_Servicio_Requerido__c.field-meta.xml
<CustomField>
    <fullName>Vactor_Servicio_Requerido__c</fullName>
    <label>Vactor Servicio Requerido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>