force-app/main/default/objects/Levantamiento_Tecnico__c/fields/VE__c.field-meta.xml
<CustomField>
    <fullName>VE__c</fullName>
    <label>VE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>