force-app/main/default/objects/Levantamiento_Tecnico__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <label>VP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>