force-app/main/default/objects/Levantamiento_Tecnico__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <label>WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>