force-app/main/default/objects/Levantamiento_Tecnico__c/fields/Zona_Genero__c.field-meta.xml
<CustomField>
    <fullName>Zona_Genero__c</fullName>
    <label>Zona / Género</label>
    <length>255</length>
    <type>Text</type>
</CustomField>